# simple-rust-binary

./: Cargo.toml
src/: main.rs
