[package]
name = "simple-rust-binary"
version = "0.1.0"
authors = ["Joshy Orndorff <admin@joshyorndorff.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-rust-library = {git = "https://github.com/JoshOrndorff/silly-rust-library", branch = "master"}